# -libinput-config

./: LICENSE  README.md  example-libinput.conf  meson.build  meson_options.txt
scripts/: preload.sh  profile.fish.in  profile.sh.in  unpreload.sh
src/: config.h  keymap.c  main.c  override.c
src/hooks/: gestures.c  init.c  keyboard.c  pointer.c
